[package]
name = "yurichevlib"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-http-proxy = { version = "1.2.5", optional = true, features = ["basic-auth", "tokio", "runtime-tokio"] }
async-tungstenite = { version = "0.25.0", features = [
    "tokio-rustls-webpki-roots",
], optional = true }
colored = "2.0.4"
fast-socks5 = { version = "0.9.5", optional = true }
futures-util = {version = "0.3.30", optional = true}
rand = "0.8.5"
rustls = { version = "0.22.2", optional = true }
rustls-pki-types = { version = "1.3.0", optional = true }
serde = { version = "1.0.197", optional = true, features = ["serde_derive"] }
snafu = { version = "0.8.0", optional = true }
tokio = { version = "1.36.0", default-features = false, features = [
    "sync",
    "net",
], optional = true }
tokio-rustls = { version = "0.25.0", optional = true }
url = { version = "2.5.0", optional = true }
webpki-roots = { version = "0.26.1", optional = true }


[dev-dependencies]
tokio = { version = "1.36.0", default-features = false, features = [
    "sync",
    "rt",
    "macros",
] }
fast-socks5 = { version = "0.9.5" }
futures-util = {version = "0.3.30"}
rustls = { version = "0.22.2" }
rustls-pki-types = { version = "1.3.0" }
serde = { version = "1.0.197", features = ["serde_derive"] }
snafu = { version = "0.8.0" }
tokio-rustls = { version = "0.25.0" }
webpki-roots = { version = "0.26.1" }



[features]
duplex = ["dep:tokio"]
proxy_socket = [
    "dep:tokio",
    "dep:fast-socks5",
    "dep:snafu",
    "dep:tokio-rustls",
    "dep:futures-util",
    "dep:async-tungstenite",
    "dep:webpki-roots",
    "dep:rustls",
    "dep:serde",
    "dep:rustls-pki-types",
    "dep:async-http-proxy",
    "dep:url",
]
